# MH-Multiverse

./: ARCHITECTURE.md  README.md  THIRD-PARTY-NOTICES.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: CHANGELOG.md
src/: App.svelte  app.css  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: calligraphy.rs  config.rs  events.rs  ini.rs  launcher.rs  lib.rs  main.rs  patches.rs  server.rs  store.rs  tuning.rs  updater.rs
src/assets/fonts/: LICENSE-FONTS.txt
src/components/: AppPanel.svelte  ConfigPanel.svelte  DataPanel.svelte  EventDefinitionEditorModal.svelte  EventRuleEditorModal.svelte  EventsPanel.svelte  LaunchPanel.svelte  OpsPanel.svelte  PanelSidebar.svelte  PatchEditorModal.svelte  PatchesPanel.svelte  PlayerCard.svelte  PlayersBlade.svelte  Rail.svelte  ServerModal.svelte  ServerPanel.svelte  StoreEditorModal.svelte  StorePanel.svelte  TabBar.svelte  TitleBar.svelte  TuningEditorModal.svelte  TuningPanel.svelte
src/lib/: catalogMeta.ts  playerMeta.ts  serverCommands.ts  serverEvents.ts  store.ts  tuningMeta.ts
