[package]
name = "mh-multiverse"
version = "0.1.0"
description = "A desktop launcher and server management tool built for MHServerEmu"
authors = ["cackl"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
aes-gcm = "0.10"
base64 = "0.22"
keyring = "2"
tauri-plugin-dialog = "2.6.0"
tokio = { version = "1", features = ["process", "io-util", "rt", "fs"] }
windows = { version = "0.61", features = ["Win32_System_JobObjects", "Win32_Foundation", "Win32_Security"] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-window-state = "2"
sysinfo = "0.36.1"
tauri-plugin-http = "2"
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
zip = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
futures-util = "0.3"
lz4_flex = { version = "0.11", default-features = false, features = ["safe-decode"] }
